--- a/index.html
+++ b/index.html
@@ -135,6 +135,29 @@
           <button class="btn-item">Learn more</button>
         </div>
       </div>
+      <div class="projects">
+        <div class="projects-block st">
+          <img src="img/st.png" alt="st">
+          <div class="block-text">
+            <h4>Leading healthcare providers</h4>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id odio mattis, blandit tortor nec, laoreet odio. Mauris cursus sollicitudin semper. </p>
+            <div class="button-item">
+              <button class="btn-item">Learn more</button>
+            </div>
+          </div>
+        </div>
+        <div class="projects-block scnd">
+          <img src="img/scnd.png" alt="scnd">
+          <div class="block-text">
+            <h4>Download our mobile apps</h4>
+            <hr />
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id odio mattis, blandit tortor nec, laoreet odio. Mauris cursus sollicitudin semper. </p>
+            <div class="button-item">
+              <button class="btn-item">Download <i class="fa fa-long-arrow-down" aria-hidden="true"></i></button>
+            </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
