--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </nav>
       </div>
     </div>
+
     <div class="content">
       <div class="welcome">
         <div class="welcome_text">
@@ -137,26 +138,83 @@
       </div>
       <div class="projects">
         <div class="projects-block st">
-          <img src="img/st.png" alt="st">
+          <img src="img/st.png" alt="st" />
           <div class="block-text">
             <h4>Leading healthcare providers</h4>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id odio mattis, blandit tortor nec, laoreet odio. Mauris cursus sollicitudin semper. </p>
+            <hr />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+              id odio mattis, blandit tortor nec, laoreet odio. Mauris cursus
+              sollicitudin semper.
+            </p>
             <div class="button-item">
               <button class="btn-item">Learn more</button>
             </div>
           </div>
         </div>
         <div class="projects-block scnd">
-          <img src="img/scnd.png" alt="scnd">
+          <img src="img/scnd.png" alt="scnd" />
           <div class="block-text">
             <h4>Download our mobile apps</h4>
             <hr />
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent id odio mattis, blandit tortor nec, laoreet odio. Mauris cursus sollicitudin semper. </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+              id odio mattis, blandit tortor nec, laoreet odio. Mauris cursus
+              sollicitudin semper.
+            </p>
             <div class="button-item">
-              <button class="btn-item">Download <i class="fa fa-long-arrow-down" aria-hidden="true"></i></button>
+              <button class="btn-item">
+                Download
+                <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
+              </button>
             </div>
+          </div>
         </div>
+      </div>
+      <div class="adv">
+        <div class="adv-header">
+          <h4>Check out our latest article</h4>
+          <hr />
+        </div>
+        <div class="adv-cards">
+          <div class="card">
+            <img src="img/1card.png" alt="1card" />
+            <h5>Disease detection, check up in the laboratory</h5>
+            <p>
+              In this case, the role of the health laboratory is very important
+              to do a disease detection...
+            </p>
+            <a href="#"
+              >Read more<i
+                class="fa fa-long-arrow-right"
+                aria-hidden="true"
+              ></i>
+            </a>
+          </div>
+          <div class="card">
+            <img src="img/2card.png" alt="2card" />
+            <h5>Herbal medicines that are safe for consumption</h5>
+            <p>
+              Herbal medicine is very widely used at this time because of its
+              very good for your health...
+            </p>
+            <a href="#"
+              >Read more<i class="fa fa-long-arrow-right" aria-hidden="true"></i
+            ></a>
+          </div>
+          <div class="card">
+            <img src="img/3card.png" alt="3card" />
+            <h5>Natural care for healthy facial skin</h5>
+            <p>
+              A healthy lifestyle should start from now and also for your skin
+              health. There are some...
+            </p>
+            <a href="#"
+              >Read more<i class="fa fa-long-arrow-right" aria-hidden="true"></i
+            ></a>
+          </div>
+        </div>
+        <button class="btn-item">View all</button>
       </div>
     </div>
   </body>
