--- a/index.html
+++ b/index.html
@@ -216,6 +216,15 @@
         </div>
         <button class="btn-item">View all</button>
       </div>
+      <div class="video">
+        <div class="video-title">
+          <h5>What our customer are saying</h5>
+        </div>
+        <div class="video-button">
+          <img src="img/play-button.png" alt="button" width="60" height="60" />
+          <p>Play Video</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
