--- a/index.html
+++ b/index.html
@@ -225,6 +225,19 @@
           <p>Play Video</p>
         </div>
       </div>
+      <div class="email">
+        <div class="email-title">
+          <h5>Subscribe on our dailies</h5>
+          <p>Articles, news and updates - be on the line</p>
+        </div>
+        <div class="email-input">
+          <input class="email" type="text" placeholder="Your email" />
+          <div class="email-text"><p>Subscribe</p></div>
+        </div>
+        <div class="email-end">
+          <p>We ensure you in that your data will be safe</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
