--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -22,21 +22,21 @@
       </div>
       <div class="links">
         <nav class="nav">
-          <li>
+          <p>
             <span><a href="#">Home</a></span>
-          </li>
-          <li>
+          </p>
+          <p>
             <a href="#">Find a Servise</a>
-          </li>
-          <li>
+          </p>
+          <p>
             <a href="#">Apps</a>
-          </li>
-          <li>
+          </p>
+          <p>
             <a href="#">Testimonials</a>
-          </li>
-          <li>
+          </p>
+          <p>
             <a href="#">About Us</a>
-          </li>
+          </p>
         </nav>
       </div>
     </div>
@@ -74,7 +74,7 @@
           <!--Карточки-->
           <div class="services">
             <div class="services-item">
-              <img src="img/lupa.png" alt="lupa" width="90px" />
+              <img src="img/lupa.png" alt="lupa" width="90" />
               <div>
                 <h3>Search doctor</h3>
                 <p>
@@ -84,7 +84,7 @@
               </div>
             </div>
             <div class="services-item">
-              <img src="img/banka.png" alt="" width="61px" />
+              <img src="img/banka.png" alt="" width="61" />
               <div>
                 <h3>Online pharmacy</h3>
                 <p>
@@ -94,7 +94,7 @@
               </div>
             </div>
             <div class="services-item">
-              <img src="img/spisoc.png" alt="" width="67px" />
+              <img src="img/spisoc.png" alt="" width="67" />
               <div>
                 <h3>Consultation</h3>
                 <p>
@@ -104,7 +104,7 @@
               </div>
             </div>
             <div class="services-item">
-              <img src="img/table.png" alt="" width="59px" />
+              <img src="img/table.png" alt="" width="59" />
               <div>
                 <h3>Details info</h3>
                 <p>
@@ -114,7 +114,7 @@
               </div>
             </div>
             <div class="services-item">
-              <img src="img/apteka.png" alt="" width="80px" height="71px" />
+              <img src="img/apteka.png" alt="" width="80" height="71" />
               <div>
                 <h3>Emergency care</h3>
                 <p>
@@ -124,7 +124,7 @@
               </div>
             </div>
             <div class="services-item">
-              <img src="img/spisoc1.png" alt="" width="69px" />
+              <img src="img/spisoc1.png" alt="" width="69" />
               <div>
                 <h3>Tracking</h3>
                 <p>Track and save your medical history and health data</p>
@@ -236,6 +236,52 @@
         </div>
         <div class="email-end">
           <p>We ensure you in that your data will be safe</p>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="logo-place">
+        <div class="logo-footer">
+          <div class="logo_img">
+            <a href="#"><img src="img/logo.png" alt="" /></a>
+          </div>
+          <div class="logo_text"><p>Trafalgar</p></div>
+        </div>
+        <div class="text-place">
+          <p>
+            Trafalgar provides progressive, and affordable healthcare,
+            accessible on mobile and online for everyone
+          </p>
+          <p>©Trafalgar PTY LTD 2020. All rights reserved</p>
+        </div>
+      </div>
+      <div class="footer-links">
+        <div class="links-ft">
+          <h4>Company</h4>
+          <ul>
+            <li>About</li>
+            <li>Testimonials</li>
+            <li>Find a doctor</li>
+            <li>Apps</li>
+          </ul>
+        </div>
+        <div class="links-ft">
+          <h4>Region</h4>
+          <ul>
+            <li>Indonesia</li>
+            <li>Singapore</li>
+            <li>Hongkong</li>
+            <li>Canada</li>
+          </ul>
+        </div>
+        <div class="links-ft">
+          <h4>Help</h4>
+          <ul>
+            <li>Help center</li>
+            <li>Contact support</li>
+            <li>Instructions</li>
+            <li>How it works</li>
+          </ul>
         </div>
       </div>
     </div>
