--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             <button type="button" class="button">Consult today</button>
           </div>
         </div>
-        <div class="welcome_img"></div>
+        <div class="welcome_img">
+          <img src="img/main_img.png" alt="" />
+        </div>
       </div>
       <div class="classes">
         <div class="classes_header">
